[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/MagnetMine.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 120.0

[node name="MagnetMine" type="Area2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MagnetField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetField"]
shape = SubResource( 2 )

[node name="Lifespan" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_MagnetMine_body_entered"]
[connection signal="body_entered" from="MagnetField" to="." method="_on_MagnetField_body_entered"]
[connection signal="body_exited" from="MagnetField" to="." method="_on_MagnetField_body_exited"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
